# 3sem_YP_part1

lab1/src/: README.md  task.md
lab1/src/option5/: CMakeLists.txt
lab1/src/option5/src/: main.cpp  main.hpp
lab1/src/option5/src/lib/: lib.cpp  lib.hpp
lab2/src/: README.md
lab2/src/option1/: CMakeLists.txt
lab2/src/option1/src/Person/HeadOfDepartment/: HeadOfDepartment.cpp  HeadOfDepartment.hpp
lab2/src/option1/src/Person/Student/: Student.cpp  Student.hpp
lab2/src/option1/src/Person/Teacher/: Teacher.cpp  Teacher.hpp
lab3/src/option21/: CMakeLists.txt  README.md
lab3/src/option21/src/: main.cpp  main.hpp
lab3/src/option21/src/MyMathOperators/: MyMathOperators.cpp  MyMathOperators.hpp
lab3/src/option21/src/MyMathOperators/MyCos/: MyCos.cpp  MyCos.hpp
lab3/src/option21/src/MyMathOperators/MySin/: MySin.cpp  MySin.hpp
lab3/src/option21/src/MyMathOperators/MyTan/: MyTan.cpp  MyTan.hpp
lab4/src/: options.csv
lab5/src/: README.md  options.csv
lab5/src/task1/src/: main.py
lab5/src/task2345/files/: result.csv  students.csv
lab5/src/task2345/src/: main.py
lab6/: README.md
lab6/rep/: main.ipynb
lab6/src/: README.md  options.csv
lab6/src/task1/option14/src/: main.py
lab6/src/task2/option9/: README.md
lab6/src/task2/option9/flowcharts/: scheme.drawio
lab6/src/task2/option9/src/: main.py
